# src/apps/productos/api/schemas/index.ts
@@ -13,6 +13,10 @@ export * from './localSchema';
 export * from './localUpdateSchema';
 export * from './localUsuarioLocalApiListarUsuariosConLocalesParams';
 export * from './pagedLocalSchema';
+export * from './pagedProductoSchema';
 export * from './pagedUsuarioConLocalesSchema';
+export * from './productoApiListarProductosParams';
+export * from './productoSchema';
+export * from './productoUpdateSchema';
 export * from './usuarioConLocalesSchema';
 export * from './usuarioLocalPayloadSchema';
